--- a/index.html
+++ b/index.html
@@ -454,7 +454,7 @@
           <div class="container-description">
             <div class="head-1">
               <p>Modern Blazer</p>
-              <p>Elevate your style with this chic blazer.</p>
+              <p>Elevate your style with this blazer.</p>
             </div>
             <div class="head-2">
               <span>Rs. 1599 </span>
